--- a/drafts/2013-07-15-book-review-the-cucumber-book.mkd
+++ b/drafts/2013-07-15-book-review-the-cucumber-book.mkd
@@ -5,9 +5,9 @@ title: 阅读者 - "Cucumber行为驱动开发指南" 能带给我们什么
 #{{ page.title }}#
 ## 介绍 ##
 
-或许你已经了解到了软件开发中一个头疼的事就是如何产生正确的需求和围绕这些需求来有效地开发软件，但是不知如何着手？
+或许你已经了解到软件开发中一个头疼的事,就是如何产生正确的需求和围绕这些需求如何开展有效的软件开发？但又不知如何着手！
 
-或许你已经了解到了一些相关的理论知识来解决这个难题：如行为驱动开发(BDD)，验收测试驱动开发（ATDD），实例化需求（Specification By Example）,但是发现很难消化的所有信息吗?
+或许你已经了解到一些相关的理论知识来解决这个难题：如行为驱动开发(BDD)，验收测试驱动开发（ATDD），实例化需求（Specification By Example）,但是发现很难消化的所有信息吗?
 
 或许你已经建立了一套相关的自动化测试，但是总觉得在为测试而测试，没有解决实际问题，有点脱钩。
 
